k3s/generated_manifests/wled-gradients/Namespace-wled-gradients.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: wled-gradients
