k3s/generated_manifests/wled-gradients/Service-wled-gradients-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wled-gradients.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: wled-gradients-tailscale
  namespace: wled-gradients
spec:
  clusterIP: None
  type: ClusterIP
