k3s/generated_manifests/wled-gradients/Service-wled-gradients.yaml
apiVersion: v1
kind: Service
metadata:
  name: wled-gradients
  namespace: wled-gradients
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: wled-gradients
  type: ClusterIP
