k3s/generated_manifests/wled-gradients/IngressRoute-wled-gradients.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wled-gradients
  namespace: wled-gradients
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wled-gradients.doma.lol`)
      services:
        - name: wled-gradients
          port: 80
